# ghost-typer

./: README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: update_version.py
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/typing/: android.rs  desktop.rs  mod.rs
src/modules/: dom.ts  settings.ts
src/modules/ui/: index.ts  renderers.ts
