[package]
name = "ghost-typer"
version = "1.0.0"
description = "A Tauri App"
authors = [ "you",]
edition = "2021"

[lib]
name = "ghost_typer_lib"
crate-type = [ "staticlib", "cdylib", "rlib",]

[dependencies]
tauri-plugin-opener = "2"
serde_json = "1"
enigo = "0.6.1"
arboard = "3.6.1"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-store = "2.4.1"

[build-dependencies.tauri-build]
version = "2"
features = []

[dependencies.tauri]
version = "2"
features = []

[dependencies.serde]
version = "1"
features = [ "derive",]
